Save db (#2)
* able to create new dir and delete in in test

* able to create temp db

* lads correct path

* test for export db

* templated tests for ZipDb()

* wrote failing tests, need to put everything into two directories

* able to zip archive

* removed testing dir

* tests are passing

* all tests are passing

* updated save to export
